# edutap.passdata_apple

./: .gitignore  Makefile  README.md  mx.ini  pyproject.toml  run.sh
src/edutap/passdata_apple/: common.py  main.py  model.py
tests/: dbconfig.py  test_restclient.py  test_template.py
tests/data/certs/: .gitignore  README.txt
